--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <nav>
               <a href="{{ site.baseurl }}/">Podcast</a>
               <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
-              <a href="{{ site.baseurl }}/About">The Fluxers</a>
+              <a href="{{ site.baseurl }}/about">The Fluxers</a>
               <a href="{{ site.baseurl }}/search">Search</a>
             </nav>
           </header>
