--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Podcast</a>
-              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
-              <a href="{{ site.baseurl }}/about">The Fluxers</a>
+              <a href="{{ site.baseurl }}/about">About</a>
+              <a href="{{ site.baseurl }}/thefluxers">The Fluxers</a>
               <a href="{{ site.baseurl }}/search">Search</a>
             </nav>
           </header>
