--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
             </div>
 
             <nav>
-              <a href="{{ site.baseurl }}/">Podcast</a>
-              <a href="{{ site.baseurl }}/about">About</a>
-              <a href="{{ site.baseurl }}/thefluxers">The Fluxers</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
+              <a href="{{ site.baseurl }}/">PODCAST</a>
+              <a href="{{ site.baseurl }}/about">ABOUT</a>
+              <a href="{{ site.baseurl }}/thefluxers">THE FLUXERS</a>
+              <a href="{{ site.baseurl }}/search">SEARCH</a>
             </nav>
           </header>
         </div>
