--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
               <a href="{{ site.baseurl }}/">PODCAST</a>
               <a href="{{ site.baseurl }}/about">ABOUT</a>
               <a href="{{ site.baseurl }}/thefluxers">THE FLUXERS</a>
+              <a href="{{ site.baseurl }}/contact">CONTACT</a>
               <a href="{{ site.baseurl }}/search">SEARCH</a>
             </nav>
           </header>
